Switch from FileUtils.readFileToString to Files.readString